# ads

./: .clang-format  .gitignore  CMakeLists.txt  README.md  bitvec_layouts.hpp  bitvector.hpp  common.hpp  main.cpp  run
benchmarks/: CMakeLists.txt  benchmarks_common.hpp  bitvector_benchmarks.cpp  eliasfano_benchmarks.cpp  generate_plots.py  profiling.cpp  rmq_benchmarks.cpp  run_benchmarks.sh  setup_test_env.sh
include/: CMakeLists.txt  bit.hpp  bit_access.hpp  bitvec_layouts.hpp  bitvector.hpp  common.hpp  elias_fano.hpp  linear_space_rmq.hpp  naive_rmq.hpp  nlogn_rmq.hpp  rand_access_iter.hpp  succinct_rmq.hpp  trees.hpp
include/bitvector/: bitvec_base.hpp  bitvector.hpp  cache_efficient_rank_bitvec.hpp  classical_bitvec.hpp  classical_rank_bitvec.hpp  efficient_rank_bitvec.hpp  recursive_bitvec.hpp  select_bitvec.hpp  trivial_bitvec.hpp
include/bitvector/base/: bitvec.hpp  concept.hpp  normal_bitvec.hpp  superblock_bitvec.hpp
report/: LICENSE.md  report.bib  report.tex
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  bit_tests.cpp  bitvector_tests.cpp  common_tests.cpp  eliasfano_tests.cpp  rmmtree_tests.cpp  rmq_tests.cpp
tests/examples/pd/project_example/: in.txt
